# mojom-standalone

./: .gitignore  BUILD.gn  CHANGELOG.md  LICENSE  README.md  invoke_code_generators.py  invoke_code_gens.py  mojom.gni  mojom_bindings_generator.py  mojom_bindings_generator_v1.py  mojom_bindings_generator_v1_unittest.py  mojom_bindings_generator_v2.py  mojom_list_dart_outputs.py  pubspec.yaml  run_code_generators.py  update-upstream.sh
bindings/: mojom.gni
generators/: BUILD.gn  mojom_cpp_generator.py  mojom_dart_generator.py  mojom_go_generator.py  mojom_java_generator.py  mojom_js_generator.py  mojom_python_generator.py
generators/cpp_templates/: interface_declaration.tmpl  interface_definition.tmpl  interface_stub_declaration.tmpl  module-internal.h.tmpl  module.cc.tmpl  module.h.tmpl  params_definition.tmpl  struct_definition.tmpl  struct_macros.tmpl  struct_serialization_declaration.tmpl  struct_serialization_definition.tmpl  union_declaration.tmpl  union_definition.tmpl  union_serialization_declaration.tmpl  union_serialization_definition.tmpl  validation_macros.tmpl  wrapper_class_declaration.tmpl  wrapper_class_definition.tmpl  wrapper_union_class_declaration.tmpl  wrapper_union_class_definition.tmpl
generators/dart_templates/: encoding_macros.tmpl  enum_definition.tmpl  interface_definition.tmpl  module.lib.tmpl  module_definition.tmpl  mojom_reference_macros.tmpl  struct_definition.tmpl  union_definition.tmpl
generators/go_templates/: encoding_macros.tmpl  enum.tmpl  interface.tmpl  mojom_reference_macros.tmpl  mojom_type_macros.tmpl  source.tmpl  struct.tmpl  union.tmpl
generators/java_templates/: data_types_definition.tmpl  struct_definition.tmpl
generators/js_templates/: union_definition.tmpl
mojo/: c_core.pxd  system.pyx
mojo_bindings/: descriptor.py  (+5 more)
(+52 files in other folders)
